--- a/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
@@ -23,32 +23,5 @@
   <% end %>
 <% end %>
 
-<% content_for :sidebar do %>
-  <div class="tagsinput">
-    <p>List of available tags<br><small><em>click for details</em></small></p>
-    <% Liquid::Template.tags.sort.each do |tag, tag_class| %>
-      <% unless tag_class.details[:summary].blank? %>
-        <a href="#" title="<%= tag_class.details[:summary] %>" data-toggle="modal" data-target="<%= "#tag_example_#{tag}" %>" ><span class="tag"><%= tag %></span></a>
-      <% end %>
-    <% end %>
-  </div>
-  
-<% end %>
+<%= render :partial => 'dm_cms/admin/shared/liquid_tags_ref' %>
 
-<% Liquid::Template.tags.each do |tag, tag_class| %>
-  <% unless tag_class.details[:description].blank? %>
-    <div id="<%= "tag_example_#{tag}" %>" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h5 id="myModalLabel"><%= tag %></h5>
-      </div>
-      <div class="modal-body">
-        <p><%= tag_class.details[:description] %></p>
-        <pre><%= tag_class.details[:example] %></pre>
-      </div>
-      <div class="modal-footer">
-        <button class="btn" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  <% end %>
-<% end %>
