--- a/forum/app/views/dm_forum/admin/forums/index.html.erb
+++ b/forum/app/views/dm_forum/admin/forums/index.html.erb
@@ -22,7 +22,7 @@
                   <%= forum.description %>
                 </div>
               </td>
-              <td><%= forum_presenter.type_of_forum %></td>
+              <td><%= forum_presenter.visibility %></td>
               <td><%= forum_presenter.label_published %></td>
             </tr>
           <% end %>
