--- a/forum/app/views/dm_forum/forum_topics/edit.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/edit.html.erb
@@ -6,13 +6,13 @@
 
 <%= render(:partial => 'dm_forum/forums/forum_header', :object => @forum, :as => :forum) %>
 
-<h1 id="new_topic"><%= I18n.t 'txt.new_topic', :default => 'Edit topic' %></h1>
+<h1 id="new_topic"><%= I18n.t 'fms.edit_topic' %></h1>
 <p class="subtitle"></p>
 
 <%= simple_form_for [@forum, @forum_topic] do |f| %>
 
   <%= f.error_notification :message => "Please review the problems below"%>
-  <%= f.input :title, :label => I18n.t('txt.views_topics.topic', :default => 'Name') %>
+  <%= f.input :title, :label => I18n.t('fms.views_topics.topic') %>
 
   <% if is_admin? && (forums = ForumSite.site.ordered_forums).length > 1 %>
     <%= f.input :forum_id, collection: forums, label_method: :name, value_method: :id %>
@@ -20,13 +20,13 @@
 
   <% if can? :moderate, @forum %>
     <div class="clearfix">
-      <%= f.input :sticky, :label => "<i class='icon-pushpin'></i> #{I18n.t('txt.sticky', :default => 'Sticky')}" %>
+      <%= f.input :sticky, :label => "<i class='icon-pushpin'></i> #{I18n.t('fms.sticky')}" %>
     </div>
     <div class="clearfix">
-      <%= f.input :locked, :label => "<i class='icon-lock'></i> #{I18n.t('txt.locked', :default => 'Locked')}" %>
+      <%= f.input :locked, :label => "<i class='icon-lock'></i> #{I18n.t('fms.locked')}" %>
     </div>
   <% end %>
 
-  <%= submit_or_cancel :save => I18n.t('txt.post_topic', :default => 'Post topic'),
+  <%= submit_or_cancel :save => I18n.t('fms.post_topic'),
         :cancel_url => [@forum] %>
 <% end %>
