--- a/forum/app/views/dm_forum/forum_comments/_formatting.html.erb
+++ b/forum/app/views/dm_forum/forum_comments/_formatting.html.erb
@@ -1,12 +1,12 @@
 <div id="markup_help">
-  <h3><%= I18n.t 'txt.views_posts.formatting_help', :default => 'Formatting Help' %></h3>
-  <p><a href="http://daringfireball.net/projects/markdown/syntax" target="_blank">Markdown</a> is used for formatting text.</p>
+  <h3><%= I18n.t 'fms.views_posts.formatting_help' %></h3>
+  <p><a href="http://daringfireball.net/projects/markdown/syntax" target="_blank">Markdown</a> <%= I18n.t 'fms.views_posts.formatting_desc' %></p>
   <ul class="list">
-    <li><%= t 'txt.views_posts.formatting_bold', :default => '**bold**' %></li>
-    <li><%= t 'txt.views_posts.formatting_italics', :default => '*italics*, _italics_' %></li>
-    <li><%= (t 'txt.views_posts.formatting_blockquote', :default => '&gt; <span>(quotes)</span>').html_safe %></li>
-    <li><%= t 'txt.views_posts.formatting_icode', :default => '`code`' %></li>
-    <li><%= (t 'txt.views_posts.formatting__horizontal_rule', :default => '*** <span>(horizontal rule)</span>').html_safe %></li>
-    <li><%= (t 'txt.views_posts.formatting_list', :default => '* <span>or</span> 1. <span>(lists)</span>').html_safe %></li>
+    <li><%= t 'fms.views_posts.formatting_bold' %></li>
+    <li><%= t 'fms.views_posts.formatting_italics' %></li>
+    <li><%= (t 'fms.views_posts.formatting_blockquote').html_safe %></li>
+    <li><%= t 'fms.views_posts.formatting_icode' %></li>
+    <li><%= (t 'fms.views_posts.formatting_horizontal_rule').html_safe %></li>
+    <li><%= (t 'fms.views_posts.formatting_list').html_safe %></li>
   </ul>
 </div>
