--- a/forum/app/views/dm_forum/forum_topics/new.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/new.html.erb
@@ -6,11 +6,10 @@
 
 <%= render(:partial => 'dm_forum/forums/forum_header', :object => @forum, :as => :forum) %>
 
-<h1 id="new_topic"><%= I18n.t 'txt.new_topic', :default => 'New topic' %></h1>
-<p class="subtitle"><%= I18n.t 'txt.by_user', :default => 'by %{user}', :user => current_user.display_name %></p>
+<h1 id="new_topic"><%= I18n.t 'fms.new_topic' %></h1>
+<p class="subtitle"><%= I18n.t 'fms.by_user', :user => current_user.display_name %></p>
 
 <%= simple_form_for [@forum, @forum_topic] do |f| %>
   <%= render :partial => "form", :object => f %>
-  <%= submit_or_cancel :save => I18n.t('txt.post_topic', :default => 'Post topic'),
-        :cancel_url => [@forum] %>
+  <%= submit_or_cancel :save => I18n.t('fms.post_topic'), :cancel => I18n.t('fms.views_topics.cancel'), :cancel_url => [@forum] %>
 <% end %>
