--- a/app/views/dm_core/admin/users/index.html.erb
+++ b/app/views/dm_core/admin/users/index.html.erb
@@ -3,8 +3,7 @@
     <table id="user_table" class="table table-striped table-bordered table-block" data-source="<%= dm_core.admin_users_url %>">
       <thead>
         <tr>
-          <th>First Name</th>
-          <th>Last Name</th>
+          <th>Name</th>
           <th>Email</th>
           <th>Country</th>
           <th>Last Access</th>
