--- a/event/app/views/dm_event/admin/workshops/index.html.erb
+++ b/event/app/views/dm_event/admin/workshops/index.html.erb
@@ -1,7 +1,3 @@
-<% content_for :sidebar do %>
-  <%= render :partial => 'configuration_sidebar' %>
-<% end %>
-
 <% toolbar = nav_bar_items([ link_to(icon_label('icon-plus', 'New'), new_admin_workshop_path, :title => 'New Workshop', :class => "nav-btn-primary") ]) %>
 <%= content_frame :title => 'Workshops', :toolbar => toolbar do %>
   <div class="table-overflow">
@@ -9,7 +5,7 @@
       <thead>
         <tr>
           <th>Title</th>
-          <th width="50">Date</th>
+          <th width="150">Date</th>
         </tr>
       </thead>
       <tbody>
@@ -17,9 +13,9 @@
           <% present workshop do |workshop_presenter| %>
             <tr class="item" data-item_id="<%= workshop.id %>">
               <td>
-                <%= link_to workshop.title, [:edit, :admin, workshop] %>
+                <%= link_to workshop.title, [:admin, workshop] %>
               </td>
-              <td><%= workshop_presenter.start_date %></td>
+              <td><%= workshop_presenter.start_end_date %></td>
             </tr>
           <% end %>
         <% end %>
