fix role checkbox, add recent users to dashboard

--- a/app/views/dm_core/admin/dashboard/index.html.erb
+++ b/app/views/dm_core/admin/dashboard/index.html.erb
@@ -23,3 +23,25 @@
     </table>
   </div>
 <% end %>
+
+<% toolbar = toolbar_button(User.count, dm_core.admin_users_path, :title => 'Number of Registered Users', :class => 'label label-success pull-right') %>
+<%= content_frame :title => 'Recent User Activity', :toolbar => toolbar, :class => 'span6' do %>
+  <div class="table-overflow">
+    <table class="table table-bordered table-block">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th style="text-align: center">Last Login</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% User.without_role(:admin).order('last_access_at DESC').limit(5).each do |user| %>
+          <tr>
+            <td><%= user.full_name %></td>
+            <td align="center"><%= user.last_access_at.nil? ? '<span class="label label-warning">n/a</span>'.html_safe : "#{time_ago_in_words(user.current_sign_in_at)} ago" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+<% end %>
