--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -3,9 +3,10 @@
     <table id="registration_table" class="table table-striped table-bordered table-block" data-source="<%= dm_event.admin_workshop_url(@workshop) %>">
       <thead>
         <tr>
-          <th width=75>Receipt</th>
+          <th width=20></th>
+          <th width=50>Receipt</th>
           <th>Name</th>
-          <th>Email</th>
+          <th width=75>Date</th>
         </tr>
       </thead>
       <tbody>
@@ -16,5 +17,6 @@
 
 <% content_for :sidebar do %>
   <%= link_to 'Edit Workshop', edit_admin_workshop_url(@workshop), :class => "action-button blue" %>
+  <%= link_to 'New Registration', register_new_url(@workshop), :class => "action-button blue", :targe => '_blank' %>
 <% end %>
 
