--- a/event/app/views/dm_event/admin/workshops/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_form.html.erb
@@ -1,15 +1,15 @@
 <% content_for :sidebar do %>
   <%= render :partial => 'configuration_sidebar' %>
 <% end %>
+<%= render :partial => 'dm_cms/admin/shared/liquid_tags_ref' %>
 
 <% submit_url = (@workshop.new_record? ? admin_workshops_path : admin_workshop_path) %>
 <%= simple_form_for(@workshop, :url => submit_url) do |f| %>
   <%= f.error_notification :message => "Please review the problems below"%>
   <%= content_box :title => @title do %>
     <%= locale_frame :title => '' do |locale| %>
-      <%= f.input "title_#{locale}", :label => 'Workshop Title', :id => 'title_error', :required => true %>
+      <%= f.input "title_#{locale}", :label => 'Title', :id => 'title_error', :required => true %>
       <%= f.input "description_#{locale}", :label => 'Description', :hint => 'Markdown format', :wrapper => :vertical, :as => :text_full_width, :mono => true, :rows => 4 %>
-      <%= f.input "payment_instructions_#{locale}", :label => 'Payment Instructions', :hint => 'Markdown format', :wrapper => :vertical, :as => :text_full_width, :mono => true, :rows => 4 %>
     <% end %>
 
     <%= f.input :country_id, :wrapper_html => { :class => 'searchDrop' }, :input_html => { :class => 'chosen_select' }, 
