--- a/event/app/assets/stylesheets/dm_event/admin.css
+++ b/event/app/assets/stylesheets/dm_event/admin.css
@@ -20,10 +20,22 @@
 .label-unconfirmed[href], .badge-unconfirmed[href] { background-color: #c0c700;}
 .label-suspended, .badge-suspended { background-color: #c0c700; }
 .label-suspended[href], .badge-suspended[href] { background-color: #c0c700;}
-.btn-pending { color: #fff; border: 1px solid #adb401; 
-  background: -moz-linear-gradient(90deg, #bac200 0%, #e4ed00 100%), #c0c700;
-  background: -webkit-gradient(linear, left bottom, left top, from(#bac200), to(#e4ed00)), #c0c700;
+.btn-pending { background-color: hsl(54, 85%, 31%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#edda2a", endColorstr="#92840b");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#edda2a), to(#92840b));
+  background-image: -moz-linear-gradient(top, #edda2a, #92840b);
+  background-image: -ms-linear-gradient(top, #edda2a, #92840b);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #edda2a), color-stop(100%, #92840b));
+  background-image: -webkit-linear-gradient(top, #edda2a, #92840b);
+  background-image: -o-linear-gradient(top, #edda2a, #92840b);
+  background-image: linear-gradient(#edda2a, #92840b);
+  border-color: #92840b #92840b hsl(54, 85%, 25%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.39);
+  -webkit-font-smoothing: antialiased;
 }
+.btn-pending .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-pending:active, .btn-pending.active, .btn-group.open .btn-pending.dropdown-toggle {
   border-color: #adb401;
   background-color: #c7ce37;
@@ -32,9 +44,20 @@
 .reviewing_color { color: #838200;}
 .label-reviewing, .badge-reviewing { background-color: #838200; }
 .label-reviewing[href], .badge-reviewing[href] { background-color: #838200;}
-.btn-reviewing { color: #fff; border: 1px solid #838200; 
-  background: -moz-linear-gradient(90deg, #818001 0%, rgb(202, 200, 1) 100%), #828100;
-  background: -webkit-gradient(linear, left bottom, left top, from(#818001), to(rgb(202, 200, 1))), #828100;
+.btn-reviewing { background-color: hsl(73, 42%, 28%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9db549", endColorstr="#586529");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#9db549), to(#586529));
+  background-image: -moz-linear-gradient(top, #9db549, #586529);
+  background-image: -ms-linear-gradient(top, #9db549, #586529);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9db549), color-stop(100%, #586529));
+  background-image: -webkit-linear-gradient(top, #9db549, #586529);
+  background-image: -o-linear-gradient(top, #9db549, #586529);
+  background-image: linear-gradient(#9db549, #586529);
+  border-color: #586529 #586529 hsl(73, 42%, 22.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.36);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-reviewing .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-reviewing:active, .btn-reviewing.active, .btn-group.open .btn-reviewing.dropdown-toggle {
@@ -49,9 +72,21 @@
 .label-approved[href], .badge-approved[href] { background-color: #4a48ff;}
 .label-subscribed, .badge-subscribed { background-color: #4a48ff; }
 .label-subscribed[href], .badge-subscribed[href] { background-color: #4a48ff;}
-.btn-accepted { color: #fff; border: 1px solid #5452ff; 
-  background: -moz-linear-gradient(90deg, #5958fd 0%, rgb(169, 168, 254) 100%), #4948fe;
-  background: -webkit-gradient(linear, left bottom, left top, from(#5958fd), to(rgb(169, 168, 254))), #4948fe;
+.btn-accepted { 
+  background-color: hsl(210, 79%, 30%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#197adb", endColorstr="#104c88");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#197adb), to(#104c88));
+  background-image: -moz-linear-gradient(top, #197adb, #104c88);
+  background-image: -ms-linear-gradient(top, #197adb, #104c88);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #197adb), color-stop(100%, #104c88));
+  background-image: -webkit-linear-gradient(top, #197adb, #104c88);
+  background-image: -o-linear-gradient(top, #197adb, #104c88);
+  background-image: linear-gradient(#197adb, #104c88);
+  border-color: #104c88 #104c88 hsl(210, 79%, 25.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.29);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-accepted .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-accepted:active, .btn-accepted.active, .btn-group.open .btn-accepted.dropdown-toggle {
@@ -64,9 +99,20 @@
 .label-paid[href], .badge-paid[href] { background-color: #049727;}
 .label-certified, .badge-certified { background-color: #049727; }
 .label-certified[href], .badge-certified[href] { background-color: #049727;}
-.btn-paid { color: #fff; border: 1px solid #199526; 
-  background: -moz-linear-gradient(90deg, #199526 0%, rgb(42, 218, 59) 100%), #199626;
-  background: -webkit-gradient(linear, left bottom, left top, from(#199526), to(rgb(42, 218, 59))), #199626;
+.btn-paid { background-color: hsl(110, 56%, 25%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#47b332", endColorstr="#27631c");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#47b332), to(#27631c));
+  background-image: -moz-linear-gradient(top, #47b332, #27631c);
+  background-image: -ms-linear-gradient(top, #47b332, #27631c);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #47b332), color-stop(100%, #27631c));
+  background-image: -webkit-linear-gradient(top, #47b332, #27631c);
+  background-image: -o-linear-gradient(top, #47b332, #27631c);
+  background-image: linear-gradient(#47b332, #27631c);
+  border-color: #27631c #27631c hsl(110, 56%, 20%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-paid .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-paid:active, .btn-paid.active, .btn-group.open .btn-paid.dropdown-toggle {
@@ -77,9 +123,20 @@
 .waitlisted_color { color: #d38100;}
 .label-waitlisted, .badge-waitlisted { background-color: #d38100; }
 .label-waitlisted[href], .badge-waitlisted[href] { background-color: #d38100;}
-.btn-waitlisted { color: #fff; border: 1px solid #d38100; 
-  background: -moz-linear-gradient(90deg, #d38100 0%, rgb(254, 194, 100) 100%), #ce7d00;
-  background: -webkit-gradient(linear, left bottom, left top, from(#d38100), to(rgb(254, 194, 100))), #ce7d00;
+.btn-waitlisted { background-color: hsl(36, 100%, 35%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffa319", endColorstr="#b26b00");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#ffa319), to(#b26b00));
+  background-image: -moz-linear-gradient(top, #ffa319, #b26b00);
+  background-image: -ms-linear-gradient(top, #ffa319, #b26b00);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffa319), color-stop(100%, #b26b00));
+  background-image: -webkit-linear-gradient(top, #ffa319, #b26b00);
+  background-image: -o-linear-gradient(top, #ffa319, #b26b00);
+  background-image: linear-gradient(#ffa319, #b26b00);
+  border-color: #b26b00 #b26b00 hsl(36, 100%, 30%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-waitlisted .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-waitlisted:active, .btn-waitlisted.active, .btn-group.open .btn-waitlisted.dropdown-toggle {
@@ -90,11 +147,21 @@
 .canceled_color { color: #8d248f;}
 .label-canceled, .badge-canceled { background-color: #8d248f; }
 .label-canceled[href], .badge-canceled[href] { background-color: #8d248f;}
-.btn-canceled { color: #fff; border: 1px solid #8d248f; 
-  background: -moz-linear-gradient(90deg, #8c238f 0%, rgb(217, 113, 220) 100%), #8c238f;
-  background: -webkit-gradient(linear, left bottom, left top, from(#8c238f), to(rgb(217, 113, 220))), #8c238f;
+.btn-canceled { background-color: hsl(0, 0%, 79%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#134134134", endColorstr="#c9c9c9");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#134134134), to(#c9c9c9));
+  background-image: -moz-linear-gradient(top, #134134134, #c9c9c9);
+  background-image: -ms-linear-gradient(top, #134134134, #c9c9c9);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #134134134), color-stop(100%, #c9c9c9));
+  background-image: -webkit-linear-gradient(top, #134134134, #c9c9c9);
+  background-image: -o-linear-gradient(top, #134134134, #c9c9c9);
+  background-image: linear-gradient(#134134134, #c9c9c9);
+  border-color: #c9c9c9 #c9c9c9 hsl(0, 0%, 68.5%);
+  color: #333 !important;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.69);
+  -webkit-font-smoothing: antialiased;
 }
-.btn-canceled .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-canceled:active, .btn-canceled.active, .btn-group.open .btn-canceled.dropdown-toggle {
   border-color: #8d248f;
   background-color: #8d248f;
@@ -105,9 +172,20 @@
 .label-rejected[href], .badge-rejected[href] { background-color: #d10029;}
 .label-unsubscribed, .badge-unsubscribed { background-color: #d10029; }
 .label-unsubscribed[href], .badge-unsubscribed[href] { background-color: #d10029;}
-.btn-rejected { color: #fff; border: 1px solid #d10029; 
-  background: -moz-linear-gradient(90deg, #d11d28 0%, rgb(238, 136, 142) 100%), #d11d28;
-  background: -webkit-gradient(linear, left bottom, left top, from(#d11d28), to(rgb(238, 136, 142))), #d11d28;
+.btn-rejected { background-color: hsl(0, 71%, 30%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#da2424", endColorstr="#821616");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#da2424), to(#821616));
+  background-image: -moz-linear-gradient(top, #da2424, #821616);
+  background-image: -ms-linear-gradient(top, #da2424, #821616);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #da2424), color-stop(100%, #821616));
+  background-image: -webkit-linear-gradient(top, #da2424, #821616);
+  background-image: -o-linear-gradient(top, #da2424, #821616);
+  background-image: linear-gradient(#da2424, #821616);
+  border-color: #821616 #821616 hsl(0, 71%, 25%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-rejected .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-rejected:active, .btn-rejected.active, .btn-group.open .btn-rejected.dropdown-toggle {
@@ -118,10 +196,22 @@
 .refunded_color { color: #b89ebc;}
 .label-refunded, .badge-refunded { background-color: #b89ebc; }
 .label-refunded[href], .badge-refunded[href] { background-color: #b89ebc;}
-.btn-refunded { color: #fff; border: 1px solid #a788ac; 
-  background: -moz-linear-gradient(90deg, #b398b7 0%, rgb(222, 210, 224) 100%), #b89dbc;
-  background: -webkit-gradient(linear, left bottom, left top, from(#b398b7), to(rgb(222, 210, 224))), #b89dbc;
+.btn-refunded { background-color: hsl(312, 44%, 43%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bb52a6", endColorstr="#9d3d8a");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#bb52a6), to(#9d3d8a));
+  background-image: -moz-linear-gradient(top, #bb52a6, #9d3d8a);
+  background-image: -ms-linear-gradient(top, #bb52a6, #9d3d8a);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #bb52a6), color-stop(100%, #9d3d8a));
+  background-image: -webkit-linear-gradient(top, #bb52a6, #9d3d8a);
+  background-image: -o-linear-gradient(top, #bb52a6, #9d3d8a);
+  background-image: linear-gradient(#bb52a6, #9d3d8a);
+  border-color: #9d3d8a #9d3d8a hsl(312, 44%, 40.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.16);
+  -webkit-font-smoothing: antialiased;
 }
+.btn-refunded .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-refunded:active, .btn-refunded.active, .btn-group.open .btn-refunded.dropdown-toggle {
   border-color: #b89ebc;
   background-color: #b89ebc;
@@ -130,9 +220,20 @@
 .noshow_color { color: #444;}
 .label-noshow, .badge-noshow { background-color: #444; }
 .label-noshow[href], .badge-noshow[href] { background-color: #444;}
-.btn-noshow { color: #fff; border: 1px solid #444; 
-  background: -moz-linear-gradient(90deg, #434342 0%, rgb(151, 151, 148) 100%), #434443;
-  background: -webkit-gradient(linear, left bottom, left top, from(#434342), to(rgb(151, 151, 148))), #434443;
+.btn-noshow { background-color: hsl(0, 0%, 16%) !important;
+background-repeat: repeat-x;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5b5b5b", endColorstr="#282828");
+background-image: -khtml-gradient(linear, left top, left bottom, from(#5b5b5b), to(#282828));
+background-image: -moz-linear-gradient(top, #5b5b5b, #282828);
+background-image: -ms-linear-gradient(top, #5b5b5b, #282828);
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5b5b5b), color-stop(100%, #282828));
+background-image: -webkit-linear-gradient(top, #5b5b5b, #282828);
+background-image: -o-linear-gradient(top, #5b5b5b, #282828);
+background-image: linear-gradient(#5b5b5b, #282828);
+border-color: #282828 #282828 hsl(0, 0%, 11%);
+color: #fff !important;
+text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+-webkit-font-smoothing: antialiased;
 }
 .btn-noshow .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-noshow:active, .btn-noshow.active, .btn-group.open .btn-noshow.dropdown-toggle {
