--- a/event/app/assets/stylesheets/dm_event/admin.css
+++ b/event/app/assets/stylesheets/dm_event/admin.css
@@ -149,22 +149,22 @@
 .label-canceled[href], .badge-canceled[href] { background-color: #8d248f;}
 .btn-canceled { background-color: hsl(0, 0%, 79%) !important;
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#134134134", endColorstr="#c9c9c9");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#134134134), to(#c9c9c9));
-  background-image: -moz-linear-gradient(top, #134134134, #c9c9c9);
-  background-image: -ms-linear-gradient(top, #134134134, #c9c9c9);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #134134134), color-stop(100%, #c9c9c9));
-  background-image: -webkit-linear-gradient(top, #134134134, #c9c9c9);
-  background-image: -o-linear-gradient(top, #134134134, #c9c9c9);
-  background-image: linear-gradient(#134134134, #c9c9c9);
-  border-color: #c9c9c9 #c9c9c9 hsl(0, 0%, 68.5%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fcfcfc", endColorstr="#c9c9c9");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#fcfcfc), to(#c9c9c9));
+  background-image: -moz-linear-gradient(top, #fcfcfc, #c9c9c9);
+  background-image: -ms-linear-gradient(top, #fcfcfc, #c9c9c9);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fcfcfc), color-stop(100%, #c9c9c9));
+  background-image: -webkit-linear-gradient(top, #fcfcfc, #c9c9c9);
+  background-image: -o-linear-gradient(top, #fcfcfc, #c9c9c9);
+  background-image: linear-gradient(#fcfcfc, #c9c9c9);
+  border-color: #c9c9c9 #c9c9c9 hsl(0, 0%, 74%);
   color: #333 !important;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.69);
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.33);
   -webkit-font-smoothing: antialiased;
 }
 .btn-canceled:active, .btn-canceled.active, .btn-group.open .btn-canceled.dropdown-toggle {
-  border-color: #8d248f;
-  background-color: #8d248f;
+  border-color: #c9c9c9;
+  background-color: #c9c9c9;
 }
 
 .rejected_color, .unsubscribed_color { color: #d10029;}
